# SQLValues

./: CMakeLists.txt  GNUGama2.29.html  README.md
Values/: backend.cpp  backend.h  bellow.cpp  blocks.h  both.cpp  called.cpp  called.h  develop.cpp  develop.h  effects.h  every.cpp  every.h  exam.h  examples.cpp  examples.h  goodmemory.cpp  goodmemory.h  list.cpp  list.h  matrix.cpp  matrix.h  shared.cpp  size.cpp  size.h  splits.h  vectors.h
matrix/gnu/lib/: GNUGama2.29_files.tar.xz  SDL2.tar.xz  Values.tar.xz  c++.tar.xz  dbus-1.0.tar.xz  dmd.tar.xz  freebasic.tar.xz  glib-2.0.tar.xz  mtd.tar.xz  net.tar.xz  netrose.tar.xz  sanitizer.tar.xz
